sidebar: fixed black area and collapsing the sidemenu & navigation menu

--- a/styles/details-bar.css
+++ b/styles/details-bar.css
@@ -4,4 +4,5 @@
     width: 40%;
     height: 100%;
     background: rgb(38, 50, 56);
+    z-index: 1;
 }
