--- a/styles/index.css
+++ b/styles/index.css
@@ -12,3 +12,28 @@ body {
     font-family: 'roboto';
     user-select: none;
 }
+
+#black-area {
+    position: fixed;
+    width: 0;
+    height: 100%;
+    opacity: 0.5;
+    background-color: rgb(0, 0, 0);
+}
+
+#black-area.show {
+    width: 100%;
+}
+
+#main-content {
+    background-color: rgb(55, 71, 79);
+    height: 100%;
+    width: 88%;
+    float: right;
+    transition: all 0.1s ease;
+    padding: 0 1%;
+}
+
+#main-content.expand {
+    width: 97.5%;
+}
