--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -33,12 +33,15 @@
     transition: all 0.1s ease;
 }
 
-.collapse .list-management>.custom-tooltip, .collapse #global-search>.custom-tooltip {
+.collapse .list-management>.custom-tooltip,
+.collapse #global-search>.custom-tooltip {
     text-align: center;
     background-color: transparent;
 }
 
-.collapse #head-name, .collapse #icon-collapse, .collapse #global-search {
+.collapse #head-name,
+.collapse #icon-collapse,
+.collapse #global-search {
     padding: 0;
     justify-content: center;
     width: 100%;
@@ -95,17 +98,26 @@
     border-radius: 5px;
 }
 
-.collapse #icon-collapse>.mdi, .collapse #global-search>.mdi {
+.collapse #icon-collapse>.mdi,
+.collapse #global-search>.mdi {
     border-radius: 5px;
     padding: 0.5em;
 }
 
-#sidebar-list>div:hover, #global-search:hover, .link-list:hover, #icon-collapse:hover>.mdi, #back-to-menu:hover {
+#sidebar-list>div:hover,
+#global-search:hover,
+.link-list:hover,
+#icon-collapse:hover>.mdi,
+#back-to-menu:hover {
     color: rgb(30, 155, 227);
     text-decoration: none;
 }
 
-.collapse>#sidebar-list>div:hover>.list-management, .collapse #global-search:hover>.mdi, .collapse #icon-collapse:hover>.mdi, #sidebar-list>div:hover>.list-management, .link-list:hover {
+.collapse>#sidebar-list>div:hover>.list-management,
+.collapse #global-search:hover>.mdi,
+.collapse #icon-collapse:hover>.mdi,
+#sidebar-list>div:hover>.list-management,
+.link-list:hover {
     background-color: rgb(55, 71, 79);
     text-decoration: none;
 }
@@ -147,7 +159,9 @@
     font-size: 1vw;
 }
 
-.collapse #sidebar-list>div:hover>.tooltip-text, .collapse #global-search:hover>.tooltip-text, .collapse #icon-collapse:hover>.tooltip-text {
+.collapse #sidebar-list>div:hover>.tooltip-text,
+.collapse #global-search:hover>.tooltip-text,
+.collapse #icon-collapse:hover>.tooltip-text {
     visibility: visible;
     width: 7%;
     height: auto;
@@ -171,22 +185,10 @@
     transition: all 0.1s ease;
 }
 
-#black-area {
-    position: fixed;
-    width: 0;
-    height: 100%;
-    opacity: 0.5;
-    background-color: rgb(0, 0, 0);
-}
-
-#black-area.show {
-    width: 100%;
-}
-
 #navigation-sidebar {
     width: 19%;
     height: 100%;
-    transform: translateX(-100%);
+    transform: translateX(0);
     position: fixed;
     display: block;
     background-color: gray;
@@ -197,10 +199,11 @@
     color: rgb(120, 144, 156);
     font-size: 1vw;
     transition: all 0.2s ease;
+    z-index: 1;
 }
 
 #navigation-sidebar.collapse {
-    transform: translateX(0);
+    transform: translateX(-100%);
     box-shadow: 50px 5px 50px rgba(45, 51, 61, 0.2);
 }
 
@@ -270,27 +273,18 @@
     padding-bottom: 0.1em;
 }
 
-.collapse .list-name, .collapse #global-search>div, .collapse .team-name, .collapse #sidebar-logo {
+.collapse .list-name,
+.collapse #global-search>div,
+.collapse .team-name,
+.collapse #sidebar-logo {
     font-size: 0;
     width: 0;
     opacity: 0;
 }
 
-.list-active, .link-active {
+.list-active,
+.link-active {
     color: white !important;
-}
-
-#main-content {
-    background-color: rgb(55, 71, 79);
-    height: 100%;
-    width: 88%;
-    float: right;
-    transition: all 0.1s ease;
-    padding: 0 1%;
-}
-
-#main-content.expand {
-    width: 97.5%;
 }
 
 #sidebar-list::-webkit-scrollbar {
